BJS2-15595
fix bags in CommentService;
fix bag in CommentMapper;